Update new title index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container">
-        <h1 class="page-title">Kuba Sienkiewicz<br>Pieśń Gustawa</h1>
+        <h1 class="page-title">Kuba Sienkiewicz<br>Pieśń Gustawa i gustawa</h1>
         <p>Choć dzieli nas majątek i różnica stanu<br>Intelekt, płeć, uroda, wiek<br>Dziewczyno, jeśli możesz, jeszcze się zastanów<br> Dlaczegom u twych stóp zwycięsko legł</p> 
         <p>Gniazda na głowie mi nie uwił orzeł biały<br>Kukułka szczęścia mi nie wykukała również<br>Lecz ty pokochaj mnie, jak inne mnie kochały<br>Za to żem geniusz, a nie gówniarz</p>
         <p>Choć wielbił ciebie książę i rozpieszczał biskup<br>Choć spłycał Francuz cię i Fin<br>Dziewczyno, dla rozkoszy dzisiaj, nie dla zysku<br>Tu jesteś ze mną, zamiast z byle kim</p>
